--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [build-system]
 requires = [
 	"flit_core >=3.2,<4",
-	"python_version >= '3.7'"
 	]
 build-backend = "flit_core.buildapi"
 
@@ -19,6 +18,7 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
     "pytest"
+	"python_version >= 3.7"
 ]
 
 [project.urls]
