--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
-    "pytest"
+    "pytest",
 	"python_version >= 3.7"
 ]
 
