--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,9 @@ readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
+requires-python = ">=3.12"
 dependencies = [
-    "pytest",
-	"python_version >= 3.12"
+    "pytest"
 ]
 
 [project.urls]
